# icy_matrix

./: Cargo.toml
.github/workflows/: rust.yml
nix/: common.nix  shell.nix
src/: content.rs  main.rs
src/backend/: mod.rs
src/backend/ruma/: error.rs  member.rs  mod.rs  timeline_event.rs
src/frontend/: member.rs  message.rs  mod.rs  node.rs
src/ui/screen/: login.rs  main.rs  mod.rs
